# Write4All

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  packages.txt  pyproject.toml  requirements.txt  review.py
notebooks/: examples.ipynb
static/: intro.md
templates/: correction.html  deletion.html  prompt_image_v1 copy.txt  prompt_image_v1.txt  prompt_json_fix.txt  prompt_v1.txt
