[tool.poetry]
name = "inclu-v1"
version = "0.1.0"
description = ""
authors = ["Jaume Ferrarons <jaume.ferrarons@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.25.0"
google-generativeai = "^0.4.1"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
