[project]
name = "Write4All"
version = "0.1.0"
description = "Write inclusive content for everyone!"
authors = ["Jaume Ferrarons <jaume.ferrarons@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.16.0",
    "litellm>=1.61.6",
    "pydantic>=2.10.6",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.6",
]
